# docs-chatbot

./: .dockerignore  .gitignore  Makefile  README.md  compose.dev.yaml  compose.yaml  generated_response = response['choices']  get_knowledge_base.py  knowledge_base.json  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build.yaml  daily-check.yml  deploy.yaml
app/: .dockerignore  Dockerfile  app.py  embeddings.py  get_knowledge_base.py  get_samples_examples.py  intercom.py  knowledge_base.json  pyproject.toml  rag_system.py  requirements.txt  test_app.py  test_get_knowledge_base.py  test_intercom.py  test_knowledge_base.json  test_rag_system.py  utils.py
app/.tmp/: prebuild.sh
app/data/: doc_about_embeddings.npy  knowledge_base.json  samples_examples.json
app/templates/: index.html
discord-bot/: app.js
