[project]
name = "docs-chatbot"
version = "0.1.0"
description = ""
authors = [
    {name = "Defang Devs",email = "devs@defang.io"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "flask (==2.0.1)",
    "flask-wtf (==1.2.2)",
    "werkzeug (==2.0.3)",
    "scikit-learn (==1.2.2)",
    "segment-analytics-python (==2.3.3)",
    "numpy (==1.24.4)",
    "sentence-transformers (==2.3.1)",
    "torch (==2.0.1)",
    "huggingface-hub (==0.15.1)",
    "openai (==0.28.0)",
    "pyyaml (==6.0.2)",
    "gitpython (==3.1.44)",
    "redis (==6.2.0)",
    "fakeredis (==2.30.1)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
